	- Improves Weapon Manager GUI infolink descriptions of target priority settings.
	- Add off-world spawning to Spawn menu (spawn locations and tournaments get automatically upgraded).
	- Add ability to add custom spawn sites to spawn menu.
	- Add Persistent UI button to Vessel Switcher to keep VS and Web Orchestration windows open when F2 UI toggled off.
- Game Modes:
	- Add secret Disco Mode.
	- ZombieMode option moved to cheat mode access.
- Competitions:
	- Adds Orbital Deployment round start mode - craft are spawned at 80km, and gravity hacked to 10 for 30 sec to accelerate craft downwards (request from SirJohn).
- Tournaments:
	- Add a '-z' option to the tournament parser to shift the scores so that the lowest is 0.
	- Add taken counts to the summaries.
	- Add a '-z' option to the tournament parser to shift the scores so that the lowest is 0.
	- Adjust rocket parts hit and damage fields to match ruby schema in the remote orchestration.
	- Only adjust the altitude for failed spawns for ground spawns.
	- Allow specifying both '-c' and tournament dir to parse the specified tournament dir as a collection (i.e., without the tournament folder structure).
	- Lower the default score weighting for rams.
- Kerbal Safety:
	- Reconfigure inventories when the kerbal inventory slider is adjusted.
- AI:
	- Add additional control "Afterburner Priority" for afterburner toggling under Speed category of AI. Default value of 50. 0 and AI will not use AB, 100 and AI will always use AB.
	- Vary AB hysteresis based on "Afterburner Priority" setting using an exponential average to smooth the vessel's TWR (lag factor of 0.5s) to judge whether AI should toggle AB vs. using instantaneous acceleration.
	- Default Guard Range increased to 20km.
	- Allow custom/modded missile and bomb bays. Set which action group controls the bay toggling on the missile/bomb itself and the AI will automatically open and close the bay when dropping the ordnance.
	- New default AI and WM settings.