@@ -128,6 +128,7 @@ Localization
         #LOC_BDArmory_Settings_waterDrag = Underwater Bullet Drag
         #LOC_BDArmory_Settings_AutoResumeTournaments = Auto-Resume Tournaments
         #LOC_BDArmory_Settings_AutoQuitMemoryUsage = Auto-Quit Memory Threshold
+        #LOC_BDArmory_Settings_CurrentMemoryUsageEstimate = Current Memory Usage Estimate
         #LOC_BDArmory_Settings_legacyArmor = Enable Legacy Armor
         #LOC_BDArmory_Settings_AdvancedUserSettings = Advanced User Settings
         #LOC_BDArmory_Settings_DamageMultiplier = Damage Multiplier
